@@ -6,11 +6,16 @@ git-annex (6.20160419) UNRELEASED; urgency=medium
     fixed to not hang when it cannot find locale files.
   * reinject: When src file's content cannot be verified, leave it alone,
     instead of deleting it.
+  * reinject: Added new mode which can reinject known files into the annex.
+    For example: git-annex reinject --known /mnt/backup/*
   * calckey: New plumbing command, calculates the key that would be used
     to refer to a file.
   * Fix bug that prevented annex.sshcaching=false configuration from taking
     effect when on a crippled filesystem. Thanks, divergentdave.
   * Isolate test suite from global git config settings.
+  * When git-annex is used with a git version older than 2.2.0, disable
+    support for adjusted branches, since GIT_COMMON_DIR is needed to update
+    them and was first added in that version of git.
 
  -- Joey Hess <id@joeyh.name>  Tue, 19 Apr 2016 12:57:15 -0400
 
